--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Playfair+Display&display=swap');
 
 .wrapper {
-
+    font-family: 'Playfair Display', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
     width: 1400px;
     height: 950px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
@@ -10,5 +11,30 @@
 }
 
 h1 {
-    font-family: 'Playfair Display', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 500;
+}
+
+p {
+    opacity: 0.5;
+    line-height: 1.5;
+}
+
+.paragraph-1:first-letter {
+    font-size: 5em;
+    color: rgba(0, 0, 0, 1);
+    float: left;
+    line-height: 0.7;
+    margin-right: 34px;
+    margin-bottom: 12px;
+}
+
+.paragraph-4 {
+    font-family: 'Lato', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+    letter-spacing: 1.2px;
+    font-size: 1.2em;
+}
+
+span {
+    font-size: 2em;
 }
